CHANGES: FIXED z-index conflict

--- a/assets/js/template_handling_editor.css
+++ b/assets/js/template_handling_editor.css
@@ -62,7 +62,7 @@
     border-radius: 6px;
     padding: 10px;
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     bottom: 100%;
     left: 50%;
     margin-left: -35px;
